[PHOENIX-8440] Collection security fixes